<resources>
    <string name="app_name">PerfectPerfume</string>

    <!--LoginActivity UI-->
    <string name="login_screen_text">Log-in</string>
    <string name="email_edittext_caption">E-mail address</string>
    <string name="password_edittext_caption">Password</string>
    <string name="login_button_text">Log-in</string>
    <string name="or_login_text">OR</string>
    <string name="register_button_text">Sign-up</string>
    <string name="loggin_in_text">Logging-in...</string>
    <string name="sign_in_google_button_text">Sign in with Google</string>

    <string name="sign_up_disclaimer_text">By Creating a Perfect Perfume account, you gain access to
        good deals and full membership on our platform. By Signing-up you also agree to the terms
        and conditions.</string>

    <!--Cart-->
    <string name="cart_item_title">Cart</string>

    <!--CheckOutActivity-->
    <string name="plus_btn_content_desc">plus</string>
    <string name="minus_btn_content_desc">minus</string>
    <string name="checkout_total_text">Total</string>

    <!--WarningMessage-->
    <string name="default_connection_warning">Your device is not connected to the internet.
        Check back later.</string>
    <string name="default_database_warning">There is something going on in our services,
        we are working on it.</string>
    <string name="google_signin_error_warning">Sign in not possible with this data.</string>
    <string name="email_signin_error_warning">The username or password is not correct.</string>
    <string name="email_signup_error_warning">This account can not be found.</string>
    <string name="validation_warning">Invalid e-mail or password.
        Use a real e-mail address and a password that is at least 6 characters long.</string>

    <string name="purchase_message_heading">Thank you!</string>
    <string name="purchase_message_body">Check your order with the Perfect Perfume Widget.</string>

    <string name="widget_default_text">You have no orders to be received, shop some perfumes
        now!</string>
    <string name="widget_nouser_text">You are not signed in, click here to do so!</string>

    <string name="payment_impossible_text">Payments are closed for now, come back later...</string>ú

    <!--contentDescriptions-->
    <string name="cart_iv_content_description">Shopping-cart icon.</string>
    <string name="google_play_button_content_description">Content part of the google-pay button.
    </string>
    <string name="google_play_button_overlay_content_description">
        Overlay part of the google-pay button.</string>
    <string name="detail_thumbnail_iv_content_description">Image of the currently selected perfume
        / cologne.</string>
    <string name="checkout_bottom_decor_content_description">Small perfume vials all over the place.
    </string>
    <string name="perfume_imageview_content_description">Small image of the perfume.</string>
    <string name="bottle_frame_dark_content_description">A bit artistic looking frames of a classic
        style perfume vial.</string>
    <string name="fab_content_description">Press to add a perfume of this kind to the cart.</string>
</resources>
