<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_interface_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/login_shared_element_iv"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:src="@drawable/bottle_frame_dark"
            android:layout_marginTop="16dp"
            android:transitionName="shared_element_bottle"
            android:contentDescription="@string/bottle_frame_dark_content_description"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_screen_text"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textSize="42sp"
            android:fontFamily="@font/signpainter_housescript_regular"
            android:textAlignment="center"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/sign_in_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:background="@drawable/edittext_bg"
            android:hint="@string/email_edittext_caption"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"
            android:textCursorDrawable="@null"
            />

        <EditText
            android:id="@+id/sign_in_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:fontFamily="sans-serif-light"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password_edittext_caption"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:lines="1"
            android:inputType="textWebPassword"
            android:textCursorDrawable="@null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="0"
                android:background="@drawable/button_bg"
                android:text="@string/register_button_text"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:elevation="8dp"
                android:textSize="32sp"
                android:fontFamily="@font/signpainter_housescript_regular"
                android:textAllCaps="false"
                android:layout_marginBottom="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="0"
                android:background="@drawable/button_bg"
                android:text="@string/login_button_text"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:elevation="8dp"
                android:textSize="32sp"
                android:fontFamily="@font/signpainter_housescript_regular"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/colorAccentLight"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/or_login_text"
                android:fontFamily="@font/signpainter_housescript_regular"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textColor="#D9FFFFFF"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/colorAccentLight"/>
        </LinearLayout>

        <Button
            android:id="@+id/sign_in_google_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_google_signin_light_normal_hdpi"
            android:text="@string/sign_in_google_button_text"
            android:layout_alignParentRight="true"
            android:elevation="8dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="false"/>
    </LinearLayout>
</FrameLayout>